# daniela-lopera-ai

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: eval.yml
docs/: prompt-engineering.md
docs/diagrams/: README.md
projects/01-document-intelligence/: README.md
projects/01-document-intelligence/api/: Dockerfile  requirements.txt
projects/01-document-intelligence/db/: schema.sql
projects/01-document-intelligence/docs/: sample-output.json
projects/01-document-intelligence/n8n/: error-handler.json  workflow.json
projects/02-autonomous-support-agent/: README.md
projects/02-autonomous-support-agent/docs/: intent-taxonomy.md  sample-conversations.md
projects/02-autonomous-support-agent/knowledge/: faq.md  troubleshooting.md
projects/02-autonomous-support-agent/n8n/: error-handler.json  workflow.json
projects/03-rag-engine/: README.md  pyproject.toml  requirements.txt
projects/04-manoexperta-voice-agent/: README.md
projects/05-ecommerce-swarm/: .env.example  README.md  config.py  main.py  pytest.ini  requirements.txt  test_graph.py
shared/: pyproject.toml
shared/ai_core/: README.md  __init__.py  config.py  providers.py  requirements.txt  vectorstore.py
shared/ai_core/prompts/: README.md  __init__.py  document_extraction.yaml  intent_classifier.yaml  rag_answer.yaml
website/: .gitignore  README.md  package.json  tailwind.config.ts
website/app/: globals.css  layout.tsx  page.tsx
website/components/: Footer.tsx  Hero.tsx  Nav.tsx  ProjectCard.tsx  Skills.tsx
website/lib/: profile.ts  projects.ts
(+115 files in other folders)
