[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-core"
version = "0.1.0"
description = "Provider-agnostic LLM/embeddings + Qdrant foundation for the AI Automation Portfolio"
readme = "ai_core/README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "PyYAML>=6.0,<7",
    "tenacity>=8.3,<10",
    "langchain-core>=0.3,<0.4",
    "langchain-openai>=0.2,<0.4",
    "langchain-anthropic>=0.2,<0.4",
    "langchain-google-genai>=2.0,<3",
    "qdrant-client>=1.9,<2",
]

[tool.setuptools]
packages = ["ai_core", "ai_core.prompts"]

[tool.setuptools.package-data]
"ai_core.prompts" = ["*.yaml"]
